--- a/posts/2021/pwa/pwa.mdx
+++ b/posts/2021/pwa/pwa.mdx
@@ -1,5 +1,5 @@
-import {postMeta} from "../../../../src/domain";
-import {Image} from 'common/Image'
+import {postMeta} from "../../../src/domain";
+import {Image} from 'common/components/Image'
 import compareTime from './compare-time.png'
 import chromeDesktopInstall from './chrome-desktop-install.png'
 import chromeMobileInstall from './chrome-mobile-install.jpeg'
