post custom loader

--- a/pages/posts/2021/typescript/advanced-types.mdx
+++ b/pages/posts/2021/typescript/advanced-types.mdx
@@ -1,5 +1,5 @@
 import ts from './ts.webp'
-import {postMeta} from "../../../src/domain";
+import {postMeta} from "../../../../src/domain";
 
 export const meta = postMeta({
   title: 'Typescript 高级类型',
