--- a/pages/posts/2021/typescript/advanced-types.mdx
+++ b/pages/posts/2021/typescript/advanced-types.mdx
@@ -3,7 +3,7 @@ import {postMeta} from "../../../../src/domain";
 
 export const meta = postMeta({
   title: 'Typescript 高级类型',
-  date: '2021-06-19',
+  date: new Date('2021-06-19'),
   image: ts,
   tags: ['Typescript'],
   categories: ['Coding'],
