post load script

--- a/pages/posts/2021/pwa/pwa.mdx
+++ b/pages/posts/2021/pwa/pwa.mdx
@@ -1,4 +1,4 @@
-import {postMeta} from "../../../../src/domain";
+import {postMeta} from "src/domain";
 import {Image} from 'common/components/Image'
 import compareTime from './compare-time.png'
 import chromeDesktopInstall from './chrome-desktop-install.png'
