header and footer

--- a/pages/posts/2021/pwa/pwa.mdx
+++ b/pages/posts/2021/pwa/pwa.mdx
@@ -30,7 +30,7 @@ PWA最早由Google于2015年发起，同年Chrome支持`Service Worker`。
 随着十多年来智能手机的发展和普及，人们访问互联网的方式已经改变，移动互联网的使用率已超过传统互联网。
 数据显示，终端用户有87%的时间花费在手机应用上，相对的，网页只占到不足二成。
 
-<Image src={compareTime} width={800}/>
+<Image src={compareTime} maxWidth={800}/>
 
 手机原生应用固然好用，但是也天生带有缺陷：
 
