--- a/pages/posts/2019/go-enc-config.mdx
+++ b/pages/posts/2019/go-enc-config.mdx
@@ -4,7 +4,7 @@ export const meta = postMeta({
   date: new Date('2019-09-02'),
   tags: ['Encrypt'],
   categories: ['Coding', 'Golang'],
-  code: [
+  links: [
     {
       name: '源码',
       link: 'https://github.com/XDean/goex/blob/master/xconfig/encrypt.go'
