--- a/pages/posts/2019/ui-task-optimize/index.mdx
+++ b/pages/posts/2019/ui-task-optimize/index.mdx
@@ -11,9 +11,9 @@ export const meta = postMeta({
   image: beforePeakClipping,
   tags: ['GUI', 'Java', 'JavaFX', 'SWT'],
   categories: ['Coding'],
-  code:[
+  links:[
     {
-      name:'FxRunCenter.java',
+      name:'源码 FxRunCenter.java',
       link:'https://github.com/XDean/Share/blob/master/src/main/java/xdean/share/gui/schedule/FxRunCenter.java',
     }
   ]
