--- a/pages/posts/2019/ann/index.mdx
+++ b/pages/posts/2019/ann/index.mdx
@@ -11,7 +11,7 @@ export const meta = postMeta({
   image: deepLearning,
   tags: ['Golang', 'Machine Learning'],
   categories: ['Coding'],
-  code: [
+  links: [
     {
       name: '源码',
       link: 'https://github.com/XDean/Share/tree/master/go/neural',
