--- a/pages/posts/2018/lambda/2-lambda-vs-method-reference.mdx
+++ b/pages/posts/2018/lambda/2-lambda-vs-method-reference.mdx
@@ -4,8 +4,8 @@ export const meta = postMeta({
   date: new Date('2018-07-11'),
   tags: ['Lambda', 'Java'],
   categories: ['Coding'],
-  prev: './1-lambda-vs-anonymous.md',
-  next: './2-lambda-vs-method-reference',
+  prev: './1-lambda-vs-anonymous.mdx',
+  next: './3-samples-and-hints.mdx',
 })
 
 # Lambda表达式(2) - VS 方法引用
