--- a/pages/posts/2018/lambda/3-samples-and-hints.mdx
+++ b/pages/posts/2018/lambda/3-samples-and-hints.mdx
@@ -4,7 +4,7 @@ export const meta = postMeta({
   date: new Date('2018-07-12'),
   tags: ['Lambda', 'Java'],
   categories: ['Coding'],
-  prev: './2-lambda-vs-method-reference.md',
+  prev: './2-lambda-vs-method-reference.mdx',
 })
 
 # Lambda表达式(3) - 建议用法与示例
