--- a/pages/posts/2018/lambda/1-lambda-vs-anonymous.mdx
+++ b/pages/posts/2018/lambda/1-lambda-vs-anonymous.mdx
@@ -4,7 +4,7 @@ export const meta = postMeta({
   date: new Date('2018-07-10'),
   tags: ['Lambda', 'Java'],
   categories: ['Coding'],
-  next: './2-lambda-vs-method-reference'
+  next: './2-lambda-vs-method-reference.mdx'
 })
 
 # Lambda表达式(1) - VS 匿名内部类
