--- a/pages/posts/2018/lambda/2-lambda-vs-method-reference.mdx
+++ b/pages/posts/2018/lambda/2-lambda-vs-method-reference.mdx
@@ -8,7 +8,7 @@ export const meta = postMeta({
   next: './3-samples-and-hints.mdx',
 })
 
-# Lambda表达式(2) - VS 方法引用
+# Java Lambda表达式(2) - VS 方法引用
 
 ## Method-ref only capture left value
 
