--- a/pages/posts/2018/lambda/1-lambda-vs-anonymous.mdx
+++ b/pages/posts/2018/lambda/1-lambda-vs-anonymous.mdx
@@ -7,7 +7,7 @@ export const meta = postMeta({
   next: './2-lambda-vs-method-reference.mdx'
 })
 
-# Lambda表达式(1) - VS 匿名内部类
+# Java Lambda表达式(1) - VS 匿名内部类
 
 ## Anonymous force capture `outer.this`
 
