--- a/pages/posts/2018/lambda/3-samples-and-hints.mdx
+++ b/pages/posts/2018/lambda/3-samples-and-hints.mdx
@@ -7,7 +7,7 @@ export const meta = postMeta({
   prev: './2-lambda-vs-method-reference.mdx',
 })
 
-# Lambda表达式(3) - 建议用法与示例
+# Java Lambda表达式(3) - 建议用法与示例
 
 ## Hints
 
