--- a/pages/posts/2021/distributed-computing/index.mdx
+++ b/pages/posts/2021/distributed-computing/index.mdx
@@ -10,7 +10,7 @@ import Image from "common/components/Image";
 export const meta = postMeta({
   date: new Date('2021-03-09'),
   image: bigData,
-  tags: ['Javascript', 'Typescript', 'Deno', 'Node'],
+  tags: ['分布式计算', '大数据', 'Spark', 'Hadoop'],
   categories: ['Coding'],
 })
 
