--- a/pages/posts/2021/urinal/index.mdx
+++ b/pages/posts/2021/urinal/index.mdx
@@ -178,8 +178,8 @@ $$
 
 从现实意义上来说
 
-- 小便池的境况在每个$[2^n, 2^{n+1}]$的前半区间逐渐尴尬，每个人趋于占用3个位置
-- 而在后半区间，尴尬逐渐化解，最后得到每个人之间只间隔一个位置，即每个人占用2个位置
+- 小便池的境况在每个$[2^n, 2^{n+1}]$的前半区间逐渐尴尬，每个人趋于占用3个位置 (不过反过来看，由于间隔变大，每个男生的症状都得以缓解)
+- 而在后半区间，尴尬逐渐化解，最后得到每个人之间只间隔一个位置，即每个人占用2个位置 (资源的尴尬得以缓解，而病人的尴尬逐渐增大)
 
 这一题解可以说非常符合直觉，也非常符合美学。
 
