use string date

--- a/pages/posts/2018/java-memory-model.mdx
+++ b/pages/posts/2018/java-memory-model.mdx
@@ -2,7 +2,7 @@ import {postMeta} from "src/domain";
 import image from './java-memory-model.png'
 
 export const meta = postMeta({
-  date: new Date('2018-10-12'),
+  date: '2018-10-12',
   image: image,
   tags: ['Java Memory Model', 'Java'],
   categories: ['Coding', 'Java'],
