--- a/pages/posts/2018/lambda/2-lambda-vs-method-reference.mdx
+++ b/pages/posts/2018/lambda/2-lambda-vs-method-reference.mdx
@@ -1,7 +1,7 @@
 import {postMeta} from "src/domain";
 
 export const meta = postMeta({
-  date: new Date('2018-07-11'),
+  date: '2018-07-11',
   tags: ['Lambda', 'Java'],
   categories: ['Coding'],
   prev: './1-lambda-vs-anonymous.mdx',
