--- a/pages/posts/2018/lambda/3-samples-and-hints.mdx
+++ b/pages/posts/2018/lambda/3-samples-and-hints.mdx
@@ -1,7 +1,7 @@
 import {postMeta} from "src/domain";
 
 export const meta = postMeta({
-  date: new Date('2018-07-12'),
+  date: '2018-07-12',
   tags: ['Lambda', 'Java'],
   categories: ['Coding'],
   prev: './2-lambda-vs-method-reference.mdx',
