--- a/pages/posts/2019/ui-task-optimize/index.mdx
+++ b/pages/posts/2019/ui-task-optimize/index.mdx
@@ -7,7 +7,7 @@ import afterPeakClipping from './after-peak-clipping.gif'
 import uiLoop from './ui-loop.svg'
 
 export const meta = postMeta({
-  date: new Date('2019-10-15'),
+  date: '2019-10-15',
   image: beforePeakClipping,
   tags: ['GUI', 'Java', 'JavaFX', 'SWT'],
   categories: ['Coding'],
