--- a/pages/posts/2020/restful.mdx
+++ b/pages/posts/2020/restful.mdx
@@ -2,7 +2,7 @@ import {postMeta} from "src/domain";
 import rest from './rest.png'
 
 export const meta = postMeta({
-  date: new Date('2020-08-05'),
+  date: '2020-08-05',
   image: rest,
   tags: ['REST', 'Web'],
   categories: ['Coding'],
