--- a/pages/posts/2020/spark-efficient-range-joins/index.mdx
+++ b/pages/posts/2020/spark-efficient-range-joins/index.mdx
@@ -6,7 +6,7 @@ import windowGrouping from './images/window-grouping.png'
 import Image from 'common/components/Image'
 
 export const meta = postMeta({
-  date: new Date('2020-10-26'),
+  date: '2020-10-26',
   image: joinTimeByDataframeSize,
   tags: ['Spark', 'Translation', 'Big Data'],
   categories: ['Coding'],
