--- a/pages/posts/2021/deno/index.mdx
+++ b/pages/posts/2021/deno/index.mdx
@@ -3,7 +3,7 @@ import logo from './deno.png'
 import Image from "common/components/Image";
 
 export const meta = postMeta({
-  date: new Date('2021-03-09'),
+  date: '2021-03-09',
   image: logo,
   tags: ['Javascript', 'Typescript', 'Deno', 'Node'],
   categories: ['Coding'],
