--- a/pages/posts/2021/distributed-computing/index.mdx
+++ b/pages/posts/2021/distributed-computing/index.mdx
@@ -8,7 +8,7 @@ import z14 from './images/z14.webp'
 import Image from "common/components/Image";
 
 export const meta = postMeta({
-  date: new Date('2021-03-15'),
+  date: '2021-03-15',
   image: bigData,
   tags: ['分布式计算', '大数据', 'Spark', 'Hadoop'],
   categories: ['Coding'],
