--- a/pages/posts/2021/pwa/index.mdx
+++ b/pages/posts/2021/pwa/index.mdx
@@ -8,7 +8,7 @@ import faster from './faster.png'
 import pwa from './pwa.svg'
 
 export const meta = postMeta({
-  date: new Date('2021-05-10'),
+  date: '2021-05-10',
   image: pwa,
   tags: ['PWA', 'Web'],
   categories: ['Coding'],
