--- a/pages/posts/2021/urinal/index.mdx
+++ b/pages/posts/2021/urinal/index.mdx
@@ -7,7 +7,7 @@ import {Urinal} from "components/urinal"
 
 export const meta = postMeta({
   title: 'The Urinal Problem 小便池问题',
-  date: new Date('2021-09-08'),
+  date: '2021-09-08',
   image: threeMan,
   tags: ['趣谈'],
   categories: ['Math'],
