--- a/pages/posts/topics/rxjava/2.mdx
+++ b/pages/posts/topics/rxjava/2.mdx
@@ -4,7 +4,7 @@ import rxjava from './images/rxjava.png'
 import reactiveModel from './images/Reactive-Model.png'
 
 export const meta = postMeta({
-  date: new Date('2018-05-04'),
+  date: '2018-05-04',
   image: rxjava,
   tags: ['RxJava', 'Java'],
   categories: ['Coding'],
