--- a/pages/posts/topics/rxjava/4.mdx
+++ b/pages/posts/topics/rxjava/4.mdx
@@ -2,7 +2,7 @@ import {postMeta} from "src/domain";
 import rxjava from './images/rxjava.png'
 
 export const meta = postMeta({
-  date: new Date('2018-09-02'),
+  date: '2018-09-02',
   image: rxjava,
   tags: ['RxJava', 'Java'],
   categories: ['Coding'],
