--- a/pages/posts/topics/spring-boot/extra/5-async.mdx
+++ b/pages/posts/topics/spring-boot/extra/5-async.mdx
@@ -2,7 +2,7 @@ import {postMeta} from "src/domain";
 import logo from '../spring-logo.svg'
 
 export const meta = postMeta({
-  date: new Date('2020-04-28'),
+  date: '2020-04-28',
   image: logo,
   tags: ['Spring Boot', 'Spring', 'Java'],
   categories: ['Coding'],
