--- a/pages/posts/2018/lambda/1-lambda-vs-anonymous.mdx
+++ b/pages/posts/2018/lambda/1-lambda-vs-anonymous.mdx
@@ -1,7 +1,7 @@
 import {postMeta} from "src/domain";
 
 export const meta = postMeta({
-  date: new Date('2018-07-10'),
+  date: '2018-07-10',
   tags: ['Lambda', 'Java'],
   categories: ['Coding'],
   next: './2-lambda-vs-method-reference.mdx'
