--- a/pages/posts/2019/ann/index.mdx
+++ b/pages/posts/2019/ann/index.mdx
@@ -7,7 +7,7 @@ import model from './MP-model.jpg'
 import Image from 'common/components/Image'
 
 export const meta = postMeta({
-  date: new Date('2019-07-02'),
+  date: '2019-07-02',
   image: deepLearning,
   tags: ['Golang', 'Machine Learning'],
   categories: ['Coding'],
