--- a/pages/posts/2019/database-normalize.mdx
+++ b/pages/posts/2019/database-normalize.mdx
@@ -1,7 +1,7 @@
 import {postMeta} from "src/domain";
 
 export const meta = postMeta({
-  date: new Date('2019-06-27'),
+  date: '2019-06-27',
   tags: ['Database'],
   categories: ['Coding'],
 })
