--- a/pages/posts/2019/go-enc-config.mdx
+++ b/pages/posts/2019/go-enc-config.mdx
@@ -1,7 +1,7 @@
 import {postMeta} from "src/domain";
 
 export const meta = postMeta({
-  date: new Date('2019-09-02'),
+  date: '2019-09-02',
   tags: ['Encrypt'],
   categories: ['Coding', 'Golang'],
   links: [
