--- a/pages/posts/2021/idea-usage/index.mdx
+++ b/pages/posts/2021/idea-usage/index.mdx
@@ -2,7 +2,7 @@ import {postMeta} from 'src/domain';
 import logo from './idea.png';
 
 export const meta = postMeta({
-  date: new Date('2021-03-09'),
+  date: '2021-03-09',
   image: logo,
   tags: ['IDEA', '工具'],
   categories: ['Coding'],
