--- a/pages/posts/topics/rxjava/3.mdx
+++ b/pages/posts/topics/rxjava/3.mdx
@@ -5,7 +5,7 @@ import scheduler from './images/Scheduler.png'
 import schedulerDelayError from './images/SchedulerDelayError.png'
 
 export const meta = postMeta({
-  date: new Date('2018-07-14'),
+  date: '2018-07-14',
   image: rxjava,
   tags: ['RxJava', 'Java'],
   categories: ['Coding'],
