--- a/pages/posts/topics/spark/barrier.mdx
+++ b/pages/posts/topics/spark/barrier.mdx
@@ -2,7 +2,7 @@ import {postMeta} from "src/domain";
 import image from './spark_big_data.jpg'
 
 export const meta = postMeta({
-  date: new Date('2021-05-08'),
+  date: '2021-05-08',
   image: image,
   tags: ['Spark'],
   categories: ['Coding'],
