--- a/pages/posts/topics/spring-boot/3.mdx
+++ b/pages/posts/topics/spring-boot/3.mdx
@@ -2,7 +2,7 @@ import {postMeta} from "src/domain";
 import logo from './spring-logo.svg'
 
 export const meta = postMeta({
-  date: new Date('2019-08-30'),
+  date: '2019-08-30',
   image: logo,
   tags: ['Spring Boot', 'Spring', 'Java'],
   categories: ['Coding'],
