--- a/pages/posts/topics/spring-boot/extra/2-custom-condition.mdx
+++ b/pages/posts/topics/spring-boot/extra/2-custom-condition.mdx
@@ -2,7 +2,7 @@ import {postMeta} from "src/domain";
 import logo from '../spring-logo.svg'
 
 export const meta = postMeta({
-  date: new Date('2019-09-12'),
+  date: '2019-09-12',
   image: logo,
   tags: ['Spring Boot', 'Spring', 'Java'],
   categories: ['Coding'],
