--- a/pages/posts/topics/spring-boot/jpa/envers/1.mdx
+++ b/pages/posts/topics/spring-boot/jpa/envers/1.mdx
@@ -2,7 +2,7 @@ import {postMeta} from "src/domain";
 import logo from '../../spring-logo.svg'
 
 export const meta = postMeta({
-  date: new Date('2020-08-04'),
+  date: '2020-08-04',
   image: logo,
   tags: ['Spring Boot', 'Spring', 'Java', 'Hibernate', 'JPA'],
   categories: ['Coding'],
