--- a/pages/posts/topics/stackoverflow/Q39494689/index.mdx
+++ b/pages/posts/topics/stackoverflow/Q39494689/index.mdx
@@ -5,7 +5,7 @@ import answer2 from './answer-2.png'
 import Image from 'common/components/Image'
 
 export const meta = postMeta({
-  date: new Date('2021-08-18'),
+  date: '2021-08-18',
   image: logo,
   tags: ['StackOverflow', 'Typescript'],
   categories: ['Coding'],
