--- a/pages/posts/2021/idea-usage/index.mdx
+++ b/pages/posts/2021/idea-usage/index.mdx
@@ -23,9 +23,9 @@ import navigate from './navigate.png'
 import httpClient from './http_client.gif'
 
 export const meta = postMeta({
-  date: '2021-03-09',
+  date: '2021-12-21',
   image: logo,
-  tags: ['IDEA', '工具'],
+  tags: ['IDEA', 'IDE', '工具'],
   categories: ['Coding'],
 })
 
