tax add 13 bonus

--- a/pages/posts/2021/tax/index.mdx
+++ b/pages/posts/2021/tax/index.mdx
@@ -36,8 +36,8 @@ export const meta = postMeta({
 
 - Q: 年终奖单独计税一定更好吗？
 - A: 通常来说，是的。只有两种情况并非如此
-  1. 奖金数额恰好在“临界点”，详见下一条
-  2. 综合所得低于免税额度(包括起征点，转向扣除等)
+  1. 奖金数额恰好在“临界点”，详见下一条。
+  2. 综合所得低于免税额度(包括起征点，专项扣除等)。例如月薪3500，年终10000。
 
 ---
 
@@ -50,8 +50,8 @@ export const meta = postMeta({
 
 - Q: 十三薪应该选择并入年终奖吗？
 - A: 通常来说，是的。只有两种情况例外
-  1. 加上十三薪后会使得一次性所得超过“临界点”，这会导致额外的税收。
-  2. 年终奖数额超过综合所得应税额，反而使得综合所得税档较低。
+  1. 加上十三薪后会使得一次性所得超过“临界点”，这会导致额外的税收。例如月薪10000，年终奖30000。
+  2. 年终奖数额超过综合所得应税额，反而使得综合所得税档较低。例如月薪5000， 年终奖50000。
 
 ## 参考资料
 
