--- a/pages/posts/2021/tax/index.mdx
+++ b/pages/posts/2021/tax/index.mdx
@@ -41,9 +41,9 @@ export const meta = postMeta({
 
 ---
 
-- Q: 年终奖数额变多，到手反而变少了，是真的吗？
-- A: 是的。这是优惠税率的漏洞（一说为by design）。
-  - 年终奖的税按年计算，而速算扣除数用月表计算，故在税档间隙处会出现递减的情况。
+- Q: 年终奖数额变多，到手反而变少了，真的有这种情况吗？
+- A: 是的。这是优惠税率的漏洞（一说为by design）。我们称之为年终奖“临界点”。
+  - 这个漏洞产生的原因是，一次性奖金所得税按年计算，而对应税表速算扣除数按月计算，故而缩水了12倍，使得在税档间隙处会出现递减的情况。
   - 具体来说，每个税档处会净亏11倍速算扣除数。例如年终奖到达36000元时，会比35999少掉 210 * 11 = 2310 元。
 
 ---
