--- a/pages/posts/2021/urinal/index.mdx
+++ b/pages/posts/2021/urinal/index.mdx
@@ -10,7 +10,7 @@ export const meta = postMeta({
   date: '2021-09-08',
   image: threeMan,
   tags: ['趣谈'],
-  categories: ['Math'],
+  categories: ['数学'],
 })
 
 _看到标题你或许会内心一惊，但是请放心，这里是正经博客，讨论的是一个数学问题_
