--- a/pages/posts/2023/scroll-gutter-bug/index.mdx
+++ b/pages/posts/2023/scroll-gutter-bug/index.mdx
@@ -32,7 +32,7 @@ export const meta = postMeta({
 - 使用`::-webkit-scrollbar`
 - 当前只有横向滚动条，而没有纵向
 
-BUG根本原因不详，已经提交给[WebKit Bugzilla](https://bugs.webkit.org/show_bug.cgi?id=253816)
+BUG根本原因不详，已经提交给[Chromium Bugs](https://bugs.chromium.org/p/chromium/issues/detail?id=1424243)
 
 ## 善后
 
