--- a/pages/posts/2023/scroll-gutter-bug/index.mdx
+++ b/pages/posts/2023/scroll-gutter-bug/index.mdx
@@ -12,7 +12,7 @@ export const meta = postMeta({
   toc: false,
 })
 
-# Webkit滚动条bug + 滚动条样式
+# Webkit滚动条BUG + 滚动条样式
 
 最近碰到了一个神奇的问题，在一个`overflow:auto`的容器上点击滚轮（鼠标中键），导致整个页面卡住。
 其实说卡住也不完全，因为可以进行<kbd>TAB</kbd>切换焦点等键盘操作，说明渲染引擎并没有卡死，而是页面无法交互。
