--- a/pages/posts/2023/typescript-5.2/index.mdx
+++ b/pages/posts/2023/typescript-5.2/index.mdx
@@ -4,7 +4,7 @@ import p1 from '../../2021/typescript/ts.webp'
 export const meta = postMeta({
   date: '2023-06-24',
   image: p1,
-  tags: ['Typescript', 'WebGL'],
+  tags: ['Typescript'],
   categories: ['Coding'],
 })
 
