--- a/pages/posts/writing/bai-ma-fei-ma/index.mdx
+++ b/pages/posts/writing/bai-ma-fei-ma/index.mdx
@@ -38,16 +38,16 @@ export const meta = postMeta({
 **门卫**：合理。<br/>
 **龙子**：如果白马是马，为什么两种情况不同呢？<br/>
 **门卫**：。。。<br/>
-**龙子**：如果白马是马，那黄马是不是马，这样一来白马就是黄马，岂不是乱套了？<br/>
+**龙子**：如果白马是马，那黄马也是马，这样一来白马就是黄马，岂不是乱套了？<br/>
 **门卫**：。。。<br/>
-**龙子**：所以说啊，白马非马，我还敢时间，就先过去了<br/>
+**龙子**：所以说啊，白马非马，我还赶时间，就先过去了<br/>
 **门卫**：。。。滚！
 <hr/>
 
-说实话，初看此文没什么意思。这部妥妥一个杠精吗？
-混淆了等于和属于的概念，欺负门卫老实人，证毕。
+说实话，初看此文没什么意思。这不妥妥一个杠精吗？
+混淆了等于＝和属于∈的概念，欺负门卫老实人，证毕。
 
-同时有一丝困惑，这么一篇没劲的诡辩怎么就流传至今，却也未作深究。
+同时我又有一丝困惑，这么一篇没劲的诡辩怎么就流传至今。却也未作深究。
 
 然而今天看了安森垚的解读，我似乎明白了。
 
@@ -64,9 +64,49 @@ export const meta = postMeta({
 如果有一个“绝对色盲”，他完全无法区分也不需要区分红黄蓝马，都是🐎而已。<br/>
 如果这个世界只有马这一种动物，我们也就不需要马这个字了，只剩下的卢、汗血、黄鬃。
 
-所以到底是先有马，还是先有白马呢？
+所以到底是先有白马是不是马呢？
 
 ## 黑人非人
 
 **本文不包含种族歧视，仅作思辨**
 
+马的事情先放一边，我们来聊一聊另一个故事。
+
+---
+
+设想你是一个人，或者说至少你自己认为自己是一个人类。
+你开着船唱着歌来到一片遥远的地方，这里树林茂密，阳光热烈。
+你带着伙计劈开荆棘踏入丛林深处，发现了一些不寻常的...家伙。
+他们看起来很像人，但是又和你大不一样。
+
+- 首先他们通体黝黑，你没见过这样的人，更像是黑猩猩
+- 他们体表似乎没有什么体毛，和你性感浓密的胸毛截然不同
+- 他们头发卷曲、嘴唇很厚、手臂似乎也比一般人长
+- 他们不会说人话
+- 好消息是，他们似乎很有力气，而且能明白你的意思，通过比划手势。
+
+他们确实看起来有点像人，但是和你太不一样了。
+
+然而你无暇思考，也不需要思考这个问题。
+因为只需要一些烟草和布匹，他们的首领就允许你带走几个黑家伙。
+这是比苦工和牛都要好用的新型工具！
+
+那么该如何称呼他们呢？
+
+如果你说葡萄牙语，你叫他们Negro。<br/>
+如果你说英语，你叫他们Black。
+
+没有Man，因为黑人非人。
+
+或者说，黑人这个概念还没有诞生。
+人指的是和你们一样的生物，至少得是白色皮肤。
+而Black，他们和牛没有区别。
+
+那么“黑人”是什么时候诞生的呢。
+
+只需等待漫长的400年，工业革命让奴隶经济失去了意义，Black才能被迫解放。
+伴随着启蒙运动带来的思潮，White不情不愿的给Black加上了Man，从此Black Man诞生了。
+
+(悦悦：这个故事有点震惊，又有点吓人。这是我从没想过的事情。)
+
+---
