--- a/pages/posts/writing/bai-ma-fei-ma/index.mdx
+++ b/pages/posts/writing/bai-ma-fei-ma/index.mdx
@@ -5,14 +5,13 @@ import huaimin from './huaimin.jpg'
 import qingtongqi from './qingtongqi.png'
 
 export const meta = postMeta({
-  date: '2023-08-08',
+  date: '2023-08-16',
   image: baima,
   tags: [],
   categories: ['随笔'],
   toc: false,
   small: true,
   countWord: true,
-  draft: true
 })
 
 # 从白马非马到相对论
@@ -28,7 +27,8 @@ export const meta = postMeta({
 
 白马非马是战国时期一哥们公孙龙的小故事。
 
-<hr/>
+---
+
 话说这天公孙龙牵着一匹白马进城门，
 
 **门卫**：马不让进。<br/>
@@ -42,7 +42,8 @@ export const meta = postMeta({
 **门卫**：。。。<br/>
 **龙子**：所以说啊，白马非马，我还赶时间，就先过去了<br/>
 **门卫**：。。。滚！
-<hr/>
+
+---
 
 说实话，初看此文没什么意思。这不妥妥一个杠精吗？
 混淆了等于＝和属于∈的概念，欺负门卫老实人，证毕。
@@ -64,7 +65,7 @@ export const meta = postMeta({
 如果有一个“绝对色盲”，他完全无法区分也不需要区分红黄蓝马，都是🐎而已。<br/>
 如果这个世界只有马这一种动物，我们也就不需要马这个字了，只剩下的卢、汗血、黄鬃。
 
-所以到底是先有白马是不是马呢？
+所以到底白马是不是马呢？
 
 ## 黑人非人
 
@@ -102,11 +103,92 @@ export const meta = postMeta({
 人指的是和你们一样的生物，至少得是白色皮肤。
 而Black，他们和牛没有区别。
 
+---
+
 那么“黑人”是什么时候诞生的呢。
 
 只需等待漫长的400年，工业革命让奴隶经济失去了意义，Black才能被迫解放。
 伴随着启蒙运动带来的思潮，White不情不愿的给Black加上了Man，从此Black Man诞生了。
 
+对于彼时的白人，其震撼程度，如同现在指着黑猩猩告诉你：从此他们是我们的同类了。
+
 (悦悦：这个故事有点震惊，又有点吓人。这是我从没想过的事情。)
 
+## 相对论
+
+话锋又一转，从哲学和历史来到科学这边。
+某天中午偶然看到这个视频[一个视频理解光速为什么会不变！](https://www.bilibili.com/video/BV1qj41197vL/)，
+展开了我对相对论的“研究”。
+
+上学的时候相对论不是考点被一笔带过，只知道尺缩钟慢，但是谁也没见过，也不知道为什么会有如此离谱的结论。
+也听说过双生子佯谬，入迷的思考过到底是弟弟老还是哥哥老。
+后来还发明了一套“朴素”的钟慢尺缩理论，并沾沾自喜。
+
+这个视频讲的着实通俗，把我这个门外汉一通点拨
+
+- “光速不变”是实验得出的公理，最基础的假设
+- 在时空坐标系中以速度进行的线性变换不能满足”光速不变“
+- 进而只能以光速线为轴进行双曲变换，以保证“光速不变”
+- 在这个变换过程中，我们得到了时间膨胀公式（居然真的可以用到勾股定理）
+- 光速之所以不变是因为光的快度为无穷大，无穷大在任何参考系中都是无穷大
+
+痛快！
+
+但是等等！这和白马非马有什么关系呢？赶紧找补回来。
+
+虽然我似是搞懂了狭义相对论，但是对于许多结论仍然无法置信。
+比如说“相对光速的两人，你看我慢，我看你也慢”。
+其实我有在说服自己，这就和“近大远小”一样，你看我小，我看你也小。
+但是因为是我未曾体验也无法想象的情景，始终无法落在心里的实处。
+
+相对论凿开了一个洞，让我窥见墙壁的另一面。
+
+正如白马非马，把我带到了时间的起点，看那经验之外的东西。
+
+## 故事的另一面
+
+回想起来，故事的另一面确实发生了不少事。
+
 ---
+
+故事的A面：西汉时期，卫青霍去病数次北征匈奴，归顺南匈奴，驱逐北匈奴，大胜而归，加封进爵。
+
+故事的B面：被赶走的北匈奴一路西迁，一定程度上导致了罗马覆灭以及数百年后奥斯曼帝国的崛起。
+
+---
+
+故事的A面：哥伦布发现新大陆，大航海时代从此开启。
+
+故事的B面：印第安人：死神来了
+
+---
+
+故事的A面：苏轼：怀民亦未寝
+
+故事的B面：
+
+<div className={'w-64'}>
+  <Image src={huaimin}/>
+</div>
+
+---
+
+## 最后
+
+白马非马和相对论本是没什么联系的两件事，但他们给我的认知带来了一定的冲击
+
+- 我以为不言自明的事情很有可能是千百年来沉淀而来
+- 而我难以理解的事物确实亘古至今未曾改变的真理
+
+经验主义给我无比的便利，却又不可避免的让我走向了唯一的路径。
+如果我只想我想得明白的，只做我能做成功的，只听我愿意听到的，我就会狭隘、固执、傲慢。
+
+> 生活在经验里，直到大厦崩塌
+
+那么如何打破这循环呢？
+
+想不通也去想，会失败的也去做，不愿听的也去听。
+
+正好多拖了几天稿，碰上了雷军的2023演讲，就以雷军的一句话作为结尾吧。
+
+> **只有突破认知，才能带来真正的成长。**
