--- a/pages/posts/writing/bai-ma-fei-ma/index.mdx
+++ b/pages/posts/writing/bai-ma-fei-ma/index.mdx
@@ -177,8 +177,8 @@ export const meta = postMeta({
 
 白马非马和相对论本是没什么联系的两件事，但他们给我的认知带来了一定的冲击
 
-- 我以为不言自明的事情很有可能是千百年来沉淀而来
-- 而我难以理解的事物确实亘古至今未曾改变的真理
+- 那些我以为不言自明的事情可能只是千百年来的经验积累
+- 那些我难以理解的事物却可能是亘古至今未曾改变的真理
 
 经验主义给我无比的便利，却又不可避免的让我走向了唯一的路径。
 如果我只想我想得明白的，只做我能做成功的，只听我愿意听到的，我就会狭隘、固执、傲慢。
