update image add SchemaInput.tsx

--- a/pages/posts/2023/webgl-point-shape/index.mdx
+++ b/pages/posts/2023/webgl-point-shape/index.mdx
@@ -3,12 +3,12 @@ import { EditablePoint } from '../../../../components/weblgl/EditablePoint';
 import { WebglPoint } from '../../../../components/weblgl/Point';
 import { PolygonSample } from '../../../../components/weblgl/PolygonSample';
 import { Sample } from '../../../../components/weblgl/sample';
-import p1 from './images/shaders.jpg'
+import p1 from './images/star.png'
 import "mafs/core.css";
 import { Mafs, Coordinates, Circle, Polygon, Point, Line, useMovablePoint } from "mafs"
 
 export const meta = postMeta({
-  date: '2023-08-15',
+  date: '2023-12-25',
   image: p1,
   tags: ['Javascript', 'WebGL', 'Plot'],
   categories: ['Coding'],
