remove empty tag

--- a/pages/posts/writing/2025-03-15/index.mdx
+++ b/pages/posts/writing/2025-03-15/index.mdx
@@ -3,7 +3,7 @@ import p1 from './image.webp'
 
 export const meta = postMeta({
   date: '2025-03-15',
-  tags: [''],
+  tags: [],
   categories: ['随笔'],
   toc: false,
   small: true,
