--- a/pages/posts/writing/2025-04-06/index.mdx
+++ b/pages/posts/writing/2025-04-06/index.mdx
@@ -1,6 +1,7 @@
 import { postMeta } from "src/domain";
 import p1 from './file.webp'
 import p2 from './board.webp'
+import Image from 'next/image';
 
 export const meta = postMeta({
   date: '2025-04-06',
@@ -34,7 +35,7 @@ export const meta = postMeta({
 因为有些事情明着说不了，只能把目的藏在无差别扫射之中。
 如果是对抗中国，只需要给中国加税就行了，再不济把欧盟日韩框起来。
 但是只有全球10%才能把开曼群岛和英属维尔京群岛纳入其中。
-比如说一辆车在中国10万生产，只要账上从开曼群岛过一遍把成本增加到45万，最后进口到美国50万出售就只要叫5万部分的税了。
+比如说一辆车在中国10万生产，只要账上从开曼群岛过一遍把成本增加到45万，最后进口到美国50万出售就只要交5万部分的税了。
 然而现在跨国公司避无可避，不管你跑到天涯海角，要么按照40万交盈利税，要么坚持高价进口按45万交4.5万关税（过路费）。
 这大概就是特朗普的明修栈道，暗度陈仓，这也是为什么关税一加，美股爆炸。
 
@@ -64,7 +65,7 @@ export const meta = postMeta({
 MAKE AMERICA GREAT AGAIN，什么是美国AMERICA？什么是伟大GREAT？
 这个问题大清很有发言权，只有自己人掌握的才是美国，只有衰退了才能再次伟大。
 世界上有两个美国，一个是全球范围内的金融集团，一个是坐落在世界孤岛的白人政府。
-现在到了美国已经宣战，请美国接招。
+现在美国已经宣战，请美国接招。
 
 以上都是从美国来看，那么中国该如何处之呢？其实加关税早就在意料之中，可以说我们已经见怪不怪了。
 对等反制当然是一个非常重要的态度，但是并不是问题的关键，或者说只是短期的对策。
