--- a/pages/posts/writing/2025-06-14/index.mdx
+++ b/pages/posts/writing/2025-06-14/index.mdx
@@ -13,7 +13,7 @@ export const meta = postMeta({
 
 我在高中时曾有一篇得意的随笔《渔父》，虽然当时老师给的评价是不知所谓，但我的确很是喜爱。
 由于“那个本子”已经丢了，我没法找回原文。前两年也曾想重新写出来，案前憋了一小时也未得其法。
-只得记下梗概，午饭还原全文了。
+只得记下梗概，无法还原全文了。
 
 故事的开头是屈原的《渔父》原文，屈原与渔父相论，然后投江殉国。
 死后意识在虚空之中遇见了天道，与天论道。先是悲痛愤慨，再到凝神谛听，最后得一点通达，祈求天道让他再入轮回。
@@ -26,10 +26,10 @@ export const meta = postMeta({
 
 我还有一篇随笔叫《地坛与我》，也已散落，内容据不可考。虽然我很喜欢课本上《我与地坛》这篇节选，但我真正看全篇是在去年回家的飞机上。
 悦悦买了两本书，她一本我一本，因为我说过我很喜欢《我与地坛》。那天的我在飞机上任眼泪喷涌，没有发出声音。
-毕竟在飞机上哭听起来不是那么吉利，别吓着别人了。在我读过的不多的文章里，这绝对是最好的一篇，即便说文无第一，我也听不进去了。
+毕竟在飞机上哭听起来不是那么吉利，别吓着旁人了。在我读过的不多的文章里，这绝对是最好的一篇，即便说文无第一，我也听不进去了。
 
 那天我就想写一篇随笔，但就像铁生所说，“有些事情只适合收藏，不能说，也不能想，却又不能忘，它们不能变成语言，一旦变成语言就不再是它们”。
-其实也有可能只是托词，我的文字的边界太窄，装不下太多思绪。一年过去了，不见太多长进，只能摘抄写句子以表此刻心绪。
+其实也有可能只是托词，我的文字的边界太窄，装不下太多思绪。一年过去了，不见太多长进，只能摘抄些句子以表此刻心绪。
 
 > 我常以为是丑女造就了美人。
 > 我常以为是愚氓举出了智者。
@@ -54,7 +54,7 @@ export const meta = postMeta({
 
 ---
 
-世界总是这样戛然而止，砰的一声，带着啜泣。
+世界总是这样戛然而止，不是砰的一声，而是带着啜泣。
 
 我对还在我身边转着圈的悦悦说，我们在节日到来前一起搭个伴吧。
 
