--- a/pages/posts/writing/2025-09-08/index.mdx
+++ b/pages/posts/writing/2025-09-08/index.mdx
@@ -4,7 +4,7 @@ import p1 from './image.webp'
 
 export const meta = postMeta({
   date: '2025-09-08',
-  tags: [''],
+  tags: [],
   categories: ['随笔'],
   toc: false,
   small: true,
